<?xml version="1.0"?>
<package>
  <name>adus_cto</name>
  <version>1.5.7</version>

  <description>
  ADUS Cto Kkyu
  </description>

  <maintainer email="gyuyeong.cho@adus.ai">gycho</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>adus_path_msgs</build_depend>
  <build_depend>adss_msgs</build_depend>
  <build_depend>morai_msgs</build_depend>


  <run_depend>std_msgs</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>nmea_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>adus_path_msgs</run_depend>
  <run_depend>adss_msgs</run_depend>
  <run_depend>morai_msgs</run_depend>

</package>
